# WeChatSaver

./: Cargo.toml  README.md
silkv3-rs/: Cargo.toml  build.rs
silkv3-rs/c-lib/: my_c_file.c
silkv3-rs/src/: bindings.rs  lib.rs
wechat-api/: Cargo.toml
wechat-api/src/: databases.rs  main.rs
wechat-api/src/databases/: user_db.rs
wechat-saver/: .env  Cargo.toml
wechat-saver/src/: android_backup.rs  android_backup_tar.rs  ffmpeg.rs  lib.rs  main.rs  sqlite.rs  voice_decode.rs  wechat.rs
wechat-saver/src/wechat/: account.rs  android_backup.rs  database.rs  databases.rs  ffmpeg.rs  file_arch.rs  file_path.rs  model.rs  utils.rs  voice_decode.rs  wx_file_index.rs
wechat-saver/src/wechat/databases/: wechat_db.rs  wechat_saver_db.rs
wechat-saver/tests/: account_test.rs  wechat_test.rs
wechat-web/: package.json  pnpm-lock.yaml
wechat-web/app/: layout.tsx  page.tsx
wechat-web/app/about/: layout.tsx  page.tsx
wechat-web/app/chat/: history-sidebar.tsx  layout.tsx  page.tsx
wechat-web/components/: app-sidebar.tsx
